--- a/MvcPractice/app/design/Frontend/Template/Customer/account/login/form.phtml
+++ b/MvcPractice/app/design/Frontend/Template/Customer/account/login/form.phtml
@@ -18,8 +18,10 @@
                 <input type="submit" name="Submit" value="Login">
             </div>
         </form>
-        <div>
+        <div class="link_group">
             <a class="forget_psw" href="#">forget password ?</a>
+            <a class="forget_psw" href="<?php echo $this->getUrl('customer/account/register') ?>">New user</a>
+
         </div>
     </div>
-</div>
+    </di v>
