--- a/MvcPractice/app/design/Frontend/Template/Customer/account/register/form.phtml
+++ b/MvcPractice/app/design/Frontend/Template/Customer/account/register/form.phtml
@@ -58,6 +58,7 @@
             </div>
         </form>
         <div>
-            <a class="signup__link" href="#">I am already a member ?</a>
+            <a class="signup__link" href="<?php echo $this->getUrl('customer/account/login') ?>">I am already a member
+                ?</a>
         </div>
     </div>
