--- a/MvcPractice/app/design/Frontend/Template/catalog/grid.phtml
+++ b/MvcPractice/app/design/Frontend/Template/catalog/grid.phtml
@@ -1,64 +1,79 @@
+<!-- Shop Section Begin -->
 <?php
-$id = $this->getRequest()->getParams('id');
-$product = Mage::getModel('catalog/product')->getCollection()
-    ->addFieldToFilter('category_id', $id);
+print_r($this->getCategores);
 ?>
-<section class="product-list">
+<section class="shop spad">
     <div class="container">
-        <h2 class="product-title">Recents Products</h2>
         <div class="row">
-            <?php
-            foreach ($product->getData() as $product) {
-                ?>
-                <!--STRT ITEM-->
-                <div class="item">
-                    <div class="product">
-                        <div class="product-thumb">
-                            <img src="<?php echo Mage::getMediaUrl('product/' . $product->getImageLink()) ?>" alt="img"
-                                class="pro-thumb-img" />
-                            <div class="product-styles">
-                                <span class="active-style" data-image="" style="background-color: tomato;"></span>
-                                <span class="" data-image="" style="background-color: royalblue;"></span>
-                                <span class="" data-image="" style="background-color: seagreen;"></span>
-                            </div>
-                            <div class="product-button">
-                                <a href="<?php echo $this->getUrl('catalog/product/view') . '?id=' . $product->getProductId() ?>"
-                                    title="Quick View">
-                                    <i class="fas fa-eye"></i>
-                                </a>
-                                <a href="" title="Add To Cart">
-                                    <i class="fas fa-shopping-cart"></i>
-                                </a>
-                                <a href="#" title="Wishlist">
-                                    <i class="far fa-heart"></i>
-                                </a>
-                            </div>
+            <div class="col-lg-3 col-md-3">
+                <div class="shop__sidebar">
+                    <div class="sidebar__categories">
+                        <div class="section-title">
+                            <h4>Categories</h4>
                         </div>
-                        <div class="product-info">
-                            <div class="rating">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                            </div>
-                            <h3 class="product-name">
-                                <?php echo $product->getName() ?>
-                            </h3>
-                            <p class="product-price first">
-                                <?php echo $product->getPrice() ?>
-                            </p>
-                            <p class="product-price">
-                                <?php echo $product->getMinPrice() ?>
-                            </p>
-                            <div class="off-info">
-                                <h2 class="sm-title">50% OFF</h2>
+                        <div class="categories__accordion">
+                            <div class="accordion" id="accordionExample">
+                                <?php
+                                foreach ($this->getCategores() as $category) { ?>
+                                    <div class="card">
+                                        <div class="card-heading active">
+                                            <a data-toggle="collapse" data-target="#collapseOne"
+                                                href="<?php echo $this->getUrl('catalog/category/view') . "?id=" . $category->getCategoryId(); ?>">
+                                                <?php echo $category->getCategoryName(); ?>
+                                            </a>
+                                        </div>
+                                    </div>
+                                <?php } ?>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!--END ITEM-->
-            <?php } ?>
+            </div>
+            <div class="col-lg-9 col-md-9">
+                <div class="row">
+                    <?php
+                    foreach ($this->getProducts() as $product) { ?>
+                        <div class="col-lg-4 col-md-6">
+                            <div class="product__item">
+                                <div class="product__item__pic set-bg" data-setbg="">
+                                    <img src="<?php echo $this->getMediaUrl('product/' . $product->getImageLink()) ?>">
+                                    <div class="label new">New</div>
+                                    <ul class="product__hover">
+                                        <li><a
+                                                href="<?php echo $this->getUrl('catalog/product/view') . "?id=" . $product->getProductId(); ?>"><span
+                                                    class="fa fa-eye"></span></a></li>
+                                        <li><a href="#"><span class="fa fa-heart"></span></a></li>
+                                    </ul>
+                                </div>
+                                <div class="product__item__text">
+                                    <h6><a href="#">
+                                            <?php echo $product->getName() ?>
+                                        </a></h6>
+                                    <div class="rating">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                    <div class="product__price">
+                                        <?php echo $product->getPrice() ?>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    <?php } ?>
+                    <div class="col-lg-12 text-center">
+                        <div class="pagination__option">
+                            <a href="#">1</a>
+                            <a href="#">2</a>
+                            <a href="#">3</a>
+                            <a href="#"><i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
