--- a/MvcPractice/app/design/Frontend/Template/cart/cart.phtml
+++ b/MvcPractice/app/design/Frontend/Template/cart/cart.phtml
@@ -1,6 +1,3 @@
-<?php
-
-?>
 <section class="shop-cart spad">
     <div class="container">
         <div class="row">
@@ -17,32 +14,51 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td class="cart__product__item">
-                                    <img src="img/shop-cart/cp-1.jpg" alt="">
-                                    <div class="cart__product__item__title">
-                                        <h6>Chain bucket bag</h6>
-                                        <div class="rating">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="cart__price">$ 150.0</td>
-                                <td class="cart__quantity">
-                                    <div class="pro-qty">
-                                        <input type="text" value="1">
-                                    </div>
-                                </td>
-                                <td class="cart__total">$ 300.0</td>
-                                <!-- <td class="cart__close"><span class="icon_close"></span></td> -->
-                                <td> <a href="#"><span class="icon_loading"></span> Delete</a></td>
-                                <td> <a href="#"><span class="icon_loading"></span> Update cart</a></td>
-                            </tr>
-
+                            <?php
+                            foreach ($this->getQuoteItem() as $_cartProduct) {
+                                ?>
+                                <form method="POST" action="<?php echo $this->getUrl('sales/quote/add') ?>">
+                                    <input type="hidden" name="cart[product_id]"
+                                        value="<?php echo $_cartProduct->getProductId() ?>">
+                                    <input type="hidden" name="cart[item_id]"
+                                        value="<?php echo $_cartProduct->getItemId() ?>">
+                                    <tr>
+                                        <td class="cart__product__item">
+                                            <img src="<?php echo $this->getMediaUrl('product/' . $_cartProduct->getProduct()->getImageLink()) ?>"
+                                                alt="">
+                                            <div class="cart__product__item__title">
+                                                <h6>
+                                                    <?php echo $_cartProduct->getProduct()->getName() ?>
+                                                </h6>
+                                                <div class="rating">
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td class="cart__price">
+                                            <?php echo $_cartProduct->getPrice() ?>
+                                        </td>
+                                        <td class="cart__quantity">
+                                            <div class="pro-qty">
+                                                <input type="number" min=1 name="cart[qty]"
+                                                    value="<?php echo $_cartProduct->getQty() ?>">
+                                            </div>
+                                        </td>
+                                        <td class="cart__total">
+                                            <?php echo $_cartProduct->getRowTotal() ?>
+                                        </td>
+                                        <td class="cart__close"><button class="edit"><span
+                                                    class="fa fa-edit"></span></button></td>
+                                        <td class="cart__close"><a
+                                                href="<?php echo $this->getUrl('sales/quote/delete') . "?id=" . $_cartProduct->getItemId() ?>"><span
+                                                    class="fa fa-times"></span></a></td>
+                                    </tr>
+                                </form>
+                            <?php } ?>
                         </tbody>
                     </table>
                 </div>
@@ -51,14 +67,9 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="cart__btn">
-                    <a href="#">Continue Shopping</a>
+                    <a href="<?php echo $this->getUrl('catalog/category/view') ?>">Continue Shopping</a>
                 </div>
             </div>
-            <!-- <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="cart__btn update__btn">
-                    <a href="#"><span class="icon_loading"></span> Update cart</a>
-                </div>
-            </div> -->
         </div>
         <div class="row">
             <div class="col-lg-6">
@@ -74,8 +85,9 @@
                 <div class="cart__total__procced">
                     <h6>Cart total</h6>
                     <ul>
-                        <li>Subtotal <span>$ 750.0</span></li>
-                        <li>Total <span>$ 750.0</span></li>
+                        <li>Total <span>
+                                <?php echo $this->getQuote()->getGrandTotal() ?>
+                            </span></li>
                     </ul>
                     <a href="#" class="primary-btn">Proceed to checkout</a>
                 </div>
