--- a/MvcPractice/skin/css/frontend/login.css
+++ b/MvcPractice/skin/css/frontend/login.css
@@ -17,7 +17,7 @@ body {
 }
 
 .container {
-    max-width: 700px;
+    max-width: 800px;
     width: 60%;
     background-color: #fff;
     padding: 25px 30px;
@@ -96,12 +96,17 @@ form .button input:hover {
     font-size: .8rem;
     font-weight: 600;
     text-decoration: underline;
-    color: #0c1ff0;
+    color: #999;
 
     &:focus,
     &:hover {
         color: darken(#060606, 13%);
     }
+}
+
+.link_group {
+    display: flex;
+    justify-content: space-between;
 }
 
 @media(max-width: 584px) {
