--- a/MvcPractice/skin/css/frontend/register.css
+++ b/MvcPractice/skin/css/frontend/register.css
@@ -17,7 +17,8 @@ body {
 }
 
 .container {
-    max-width: 700px;
+    align-items: center;
+    max-width: 900px;
     width: 60%;
     background-color: #fff;
     padding: 25px 30px;
