--- a/MvcPractice/app/design/Frontend/Template/Customer/account/register/form.phtml
+++ b/MvcPractice/app/design/Frontend/Template/Customer/account/register/form.phtml
@@ -4,12 +4,12 @@
         <form action=<?php echo $this->getUrl('customer/account/save') ?> method="post">
             <div class="user-details">
                 <div class="input-box">
-                    <span class="details">Full Name</span>
-                    <input type="text" placeholder="Enter your name" name="customer_account[full_name]" required>
+                    <span class="details">First Name</span>
+                    <input type="text" placeholder="Enter your first name" name="customer_account[first_name]" required>
                 </div>
                 <div class="input-box">
-                    <span class="details">Username</span>
-                    <input type="text" placeholder="Enter your username" name="customer_account[user_name]" required>
+                    <span class="details">Last Name</span>
+                    <input type="text" placeholder="Enter your last name" name="customer_account[last_name]" required>
                 </div>
                 <div class="input-box">
                     <span class="details">Email</span>
@@ -17,7 +17,7 @@
                 </div>
                 <div class="input-box">
                     <span class="details">Phone Number</span>
-                    <input type="text" placeholder="Enter your number" name="customer_account[phone]" required>
+                    <input type="text" placeholder="Enter your number" name="customer_account[billing_phone]" required>
                 </div>
                 <div class="input-box">
                     <span class="details">Password</span>
