--- a/MvcPractice/app/design/Frontend/Template/page/header.phtml
+++ b/MvcPractice/app/design/Frontend/Template/page/header.phtml
@@ -72,6 +72,8 @@
                                     class="fa fa-shopping-bag"></span>
                                 <div class="tip">2</div>
                             </a></li>
+                        <li><a href="<?php echo $this->getUrl('customer/account/profile') ?>"><span><i
+                                        class="fa fa-user" aria-hidden="true"></i></span></a></li>
                     </ul>
                 </div>
             </div>
