--- a/MvcPractice/skin/css/admin/list.css
+++ b/MvcPractice/skin/css/admin/list.css
@@ -1,6 +1,6 @@
 .box {
     width: 100%;
-    max-width: 700px;
+    max-width: 1200px;
     margin: 20px auto;
     padding: 20px;
     border: 1px solid #ccc;
@@ -19,7 +19,7 @@
 } */
 
 .container {
-    max-width: 1000px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -84,6 +84,7 @@ h2 {
         text-transform: uppercase;
         letter-spacing: 0.03em;
         color: #3e6765;
+        width: 100%;
     }
 
     .table-row {
