--- a/MvcPractice/app/design/Frontend/Template/cart/cart.phtml
+++ b/MvcPractice/app/design/Frontend/Template/cart/cart.phtml
@@ -89,7 +89,7 @@
                                 <?php echo $this->getQuote()->getGrandTotal() ?>
                             </span></li>
                     </ul>
-                    <a href="#" class="primary-btn">Proceed to checkout</a>
+                    <a href="<?php echo $this->getUrl('cart/checkout') ?>" class="primary-btn">Proceed to checkout</a>
                 </div>
             </div>
         </div>
