--- a/MvcPractice/skin/css/frontend/style.css
+++ b/MvcPractice/skin/css/frontend/style.css
@@ -48,7 +48,7 @@ h6 {
 p {
 	font-size: 14px;
 	font-family: "Montserrat", sans-serif;
-	color: #666666;
+	/* color: #666666; */
 	font-weight: 400;
 	line-height: 24px;
 	margin: 0 0 15px 0;
@@ -190,7 +190,7 @@ ol {
 	border: none;
 	border-bottom: 2px solid #dddddd;
 	background: 0 0;
-	color: #999;
+	/* color: #999; */
 }
 
 .search-close-switch {
