--- a/MvcPractice/app/design/Frontend/Template/page/header.phtml
+++ b/MvcPractice/app/design/Frontend/Template/page/header.phtml
@@ -38,7 +38,7 @@
             <div class="col-xl-6 col-lg-7">
                 <nav class="header__menu">
                     <ul>
-                        <li class="active"><a href="./index.html">Home</a></li>
+                        <li class="active"><a href="<?php echo $this->getUrl('page') ?>">Home</a></li>
                         <li><a href="#">Women’s</a></li>
                         <li><a href="#">Men’s</a></li>
                         <li><a href="./shop.html">Shop</a></li>
@@ -68,8 +68,7 @@
                         <li><a href="#"><span class="fa fa-heart"></span>
                                 <div class="tip">2</div>
                             </a></li>
-                        <li><a href="<?php $this->getUrl('cart/index/index') ?>"><span
-                                    class="fa fa-shopping-bag"></span>
+                        <li><a href="<?php echo $this->getUrl('cart') ?>"><span class="fa fa-shopping-bag"></span>
                                 <div class="tip">2</div>
                             </a></li>
                         <li><a href="<?php echo $this->getUrl('customer/account/profile') ?>"><span><i
