--- a/MvcPractice/app/design/Frontend/Template/cart/cart.phtml
+++ b/MvcPractice/app/design/Frontend/Template/cart/cart.phtml
@@ -1,98 +1,120 @@
 <section class="shop-cart spad">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="shop__cart__table">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Product</th>
-                                <th>Price</th>
-                                <th>Quantity</th>
-                                <th>Total</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <?php
-                            foreach ($this->getQuoteItem() as $_cartProduct) {
-                                ?>
-                                <form method="POST" action="<?php echo $this->getUrl('sales/quote/add') ?>">
-                                    <input type="hidden" name="cart[product_id]"
-                                        value="<?php echo $_cartProduct->getProductId() ?>">
-                                    <input type="hidden" name="cart[item_id]"
-                                        value="<?php echo $_cartProduct->getItemId() ?>">
-                                    <tr>
-                                        <td class="cart__product__item">
-                                            <img src="<?php echo $this->getMediaUrl('product/' . $_cartProduct->getProduct()->getImageLink()) ?>"
-                                                alt="">
-                                            <div class="cart__product__item__title">
-                                                <h6>
-                                                    <?php echo $_cartProduct->getProduct()->getName() ?>
-                                                </h6>
-                                                <div class="rating">
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
+        <?php if ($this->getQuoteItem()): ?>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="shop__cart__table">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Product</th>
+                                    <th>Price</th>
+                                    <th>Quantity</th>
+                                    <th>Total</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <?php
+                                foreach ($this->getQuoteItem() as $_cartProduct) {
+                                    ?>
+                                    <form method="POST" action="<?php echo $this->getUrl('sales/quote/add') ?>">
+                                        <input type="hidden" name="cart[product_id]"
+                                            value="<?php echo $_cartProduct->getProductId() ?>">
+                                        <input type="hidden" name="cart[item_id]"
+                                            value="<?php echo $_cartProduct->getItemId() ?>">
+                                        <tr>
+                                            <td class="cart__product__item">
+                                                <img src="<?php echo $this->getMediaUrl('product/' . $_cartProduct->getProduct()->getImageLink()) ?>"
+                                                    alt="">
+                                                <div class="cart__product__item__title">
+                                                    <h6>
+                                                        <?php echo $_cartProduct->getProduct()->getName() ?>
+                                                    </h6>
+                                                    <div class="rating">
+                                                        <i class="fa fa-star"></i>
+                                                        <i class="fa fa-star"></i>
+                                                        <i class="fa fa-star"></i>
+                                                        <i class="fa fa-star"></i>
+                                                        <i class="fa fa-star"></i>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                        </td>
-                                        <td class="cart__price">
-                                            <?php echo $_cartProduct->getPrice() ?>
-                                        </td>
-                                        <td class="cart__quantity">
-                                            <div class="pro-qty">
-                                                <input type="number" min=1 name="cart[qty]"
-                                                    value="<?php echo $_cartProduct->getQty() ?>">
-                                            </div>
-                                        </td>
-                                        <td class="cart__total">
-                                            <?php echo $_cartProduct->getRowTotal() ?>
-                                        </td>
-                                        <td class="cart__close"><button class="edit"><span
-                                                    class="fa fa-edit"></span></button></td>
-                                        <td class="cart__close"><a
-                                                href="<?php echo $this->getUrl('sales/quote/delete') . "?id=" . $_cartProduct->getItemId() ?>"><span
-                                                    class="fa fa-times"></span></a></td>
-                                    </tr>
-                                </form>
-                            <?php } ?>
-                        </tbody>
-                    </table>
+                                            </td>
+                                            <td class="cart__price">
+                                                <?php echo $_cartProduct->getPrice() ?>
+                                            </td>
+                                            <td class="cart__quantity">
+                                                <div class="pro-qty">
+                                                    <input type="number" min=1 name="cart[qty]"
+                                                        value="<?php echo $_cartProduct->getQty() ?>">
+                                                </div>
+                                            </td>
+                                            <td class="cart__total">
+                                                <?php echo $_cartProduct->getRowTotal() ?>
+                                            </td>
+                                            <td class="cart__close"><button class="edit"><span
+                                                        class="fa fa-edit"></span></button></td>
+                                            <td class="cart__close"><a
+                                                    href="<?php echo $this->getUrl('sales/quote/delete') . "?id=" . $_cartProduct->getItemId() ?>"><span
+                                                        class="fa fa-times"></span></a></td>
+                                        </tr>
+                                    </form>
+                                <?php } ?>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="cart__btn">
-                    <a href="<?php echo $this->getUrl('catalog/category/view') ?>">Continue Shopping</a>
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="cart__btn">
+                        <a href="<?php echo $this->getUrl('catalog/category/view') ?>">Continue Shopping</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="discount__content">
-                    <h6>Discount codes</h6>
-                    <form action="#">
-                        <input type="text" placeholder="Enter your coupon code">
-                        <button type="submit" class="site-btn">Apply</button>
-                    </form>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="discount__content">
+                        <h6>Discount codes</h6>
+                        <form action="#">
+                            <input type="text" placeholder="Enter your coupon code">
+                            <button type="submit" class="site-btn">Apply</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-4 offset-lg-2">
+                    <div class="cart__total__procced">
+                        <h6>Cart total</h6>
+                        <ul>
+                            <li>Total <span>
+                                    <?php echo $this->getQuote()->getGrandTotal() ?>
+                                </span></li>
+                        </ul>
+                        <a href="<?php echo $this->getUrl('cart/checkout') ?>" class="primary-btn">Proceed to checkout</a>
+                    </div>
                 </div>
             </div>
-            <div class="col-lg-4 offset-lg-2">
-                <div class="cart__total__procced">
-                    <h6>Cart total</h6>
-                    <ul>
-                        <li>Total <span>
-                                <?php echo $this->getQuote()->getGrandTotal() ?>
-                            </span></li>
-                    </ul>
-                    <a href="<?php echo $this->getUrl('cart/checkout') ?>" class="primary-btn">Proceed to checkout</a>
+        <?php else: ?>
+            <div class="container-fluid  mt-100">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="card-body cart">
+                                <div class="col-sm-12 empty-cart-cls text-center">
+                                    <img src="https://i.imgur.com/dCdflKN.png" width="130" height="130"
+                                        class="img-fluid mb-4 mr-3">
+                                    <h3><strong>Your Cart is Empty</strong></h3>
+                                    <h4>Add something to make me happy :)</h4>
+                                    <a href="<?php echo $this->getUrl('catalog/category/view') ?>"
+                                        class="btn btn-primary cart-btn-transform m-3" data-abc="true">continue
+                                        shopping</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
+        <?php endif; ?>
     </div>
 </section>
 <!-- Shop Cart Section End -->
