--- a/MvcPractice/skin/css/frontend/cart.css
+++ b/MvcPractice/skin/css/frontend/cart.css
@@ -235,3 +235,36 @@
     text-align: center;
     padding: 12px 0 10px;
 }
+
+/* empty cart */
+.mt-100 {
+    margin-top: 100px;
+
+}
+
+.card {
+    border: 0px solid rgba(0, 0, 0, .125);
+    margin-bottom: 30px;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    letter-spacing: .5px;
+    border-radius: 8px;
+    -webkit-box-shadow: 1px 5px 24px 0 rgba(68, 102, 242, .05);
+    box-shadow: 1px 5px 24px 0 rgba(68, 102, 242, .05);
+}
+
+.card-header:first-child {
+    border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
+}
+
+.card .card-body {
+    padding: 30px;
+    background-color: transparent;
+}
+
+.btn-primary,
+.btn-primary.disabled,
+.btn-primary:disabled {
+    background-color: #4466f2 !important;
+    border-color: #4466f2 !important;
+}
