--- a/MvcPractice/app/design/Frontend/Template/Customer/admin/order/view.phtml
+++ b/MvcPractice/app/design/Frontend/Template/Customer/admin/order/view.phtml
@@ -15,17 +15,12 @@
                                 </a>
                             </div>
                             <div class="col-8-12">
-                                <div class="row _1k5oiV">
-                                    <span class="_2KpZ6l row _3hTjfv">Order Number: </span>
-                                    <span class="_2KpZ6l row _3hTjfv">
-                                        <?php echo $this->getOrderCollection()->getOrderNumber() ?>
-                                    </span>
-                                </div>
-                                <div class="row _1k5oiV">
-                                    <span class="_2KpZ6l row _3hTjfv">
-                                        <?php echo $this->getItem()->getProduct()->getName() ?>
-                                    </span>
-                                </div>
+                                <a class="_2KpZ6l row _3hTjfv"
+                                    href="/onego-business-compact-22-l-laptop-backpack/p/itmf97627629ef0a?pid=BKPG53CGFG2ANVUS&amp;lid=LSTBKPG53CGFG2ANVUSOVHE99"
+                                    target="_blank" previewlistener="true">
+                                    <?php echo $this->getItem()->getProduct()->getName() ?>
+
+                                </a>
                                 <div class="row _1k5oiV">
                                     <span class="_3kfmpa">
                                         <span class="_1k5oiV">Quantity: </span>
