--- a/MvcPractice/app/design/Frontend/Template/admin/admin.phtml
+++ b/MvcPractice/app/design/Frontend/Template/admin/admin.phtml
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <?php echo ($this->getChild('head')->toHtml())?>
+    <?php echo ($this->getChild('head')->toHtml()) ?>
 </head>
-<body>
-    
-<div class="mainCont">
-    <section class="left2"><?php echo ($this->getChildHtml('adminleft'))?></section>
-    <section class="container_content"><?php echo ($this->getChildHtml('content'))?></section>
-</div>
 
-    
+<body>
+    <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
+        <?php echo ($this->getChildHtml('header')) ?>
+
+        <div class="app-main">
+            <?php echo ($this->getChildHtml('content')) ?>
+            <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+        </div>
+    </div>
 </body>
-</html>
+<script type="text/javascript"
+    src="https://demo.dashboardpack.com/architectui-html-free/assets/scripts/main.js"></script>
