--- a/MvcPractice/app/design/Frontend/Template/Core/admin.phtml
+++ b/MvcPractice/app/design/Frontend/Template/Core/admin.phtml
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <?php echo $this->getChildHtml('head'); ?>
+    <?php echo $this->getChildHtml('head') ?>
 </head>
 
 <body>
-    <div class="sidebar">
-        <?php echo $this->getChildHtml('sidebar'); ?>
-    </div>
-    <div class="content">
+    <div class="admin-panel clearfix">
+        <?php echo $this->getChildHtml('left'); ?>
         <?php echo $this->getChildHtml('content'); ?>
     </div>
 </body>
