--- a/MvcPractice/app/design/Frontend/Template/catalog/admin/Category/form.phtml
+++ b/MvcPractice/app/design/Frontend/Template/catalog/admin/Category/form.phtml
@@ -1,37 +1,23 @@
 <?php
 $category = $this->getCategory();
 ?>
-<div class="box">
-    <div class="container">
-        <div class="title">Category Information</div>
-        <div class="content">
-            <form action=<?php echo $this->getUrl('admin/catalog_category/save') ?> method="post">
-                <input type="hidden" id="category_id" name="catalog_category[category_id]"
-                    value="<?php echo $category->getCategoryId() ?>">
+<div class="quick-press">
+    <h4>Category Form</h4>
+    <form action="" method="post">
+        <input type="hidden" id="category_id" name="catalog_category[category_id]"
+            value="<?php echo $category->getCategoryId() ?>">
 
-                <div class="user-details">
-                    <div class="form-group">
-                        <label for="name" class="details">Name </label>
-                        <input type="textbox" class="form-control" id="name" name="catalog_category[category_name]"
-                            value="<?php echo $category->getCategoryName() ?>" placeholder="Enter name">
-                    </div>
-                    <div class="form-group">
-                        <label for="status" class="details">Status</label>
-                        <select id="status" class="form-control" name="catalog_category[status]" ?>"
-                            class="form-control">
-                            <?php
-                            $status = [1 => "Enabled", 0 => "Disabled"];
-                            foreach ($status as $key => $item) {
-                                echo '<option value="' . $key . '" ' . (($category->getStatus() == $item) ? 'selected' : '') . '>' . $item . '</option>';
-                            }
-                            ?>
-                        </select>
-                    </div>
-                </div>
-                <div class="button">
-                    <input type="submit" value="Submit" name="submit">
-                </div>
-            </form>
-        </div>
-    </div>
+        <input type="text" name="catalog_category[category_name]" value="<?php echo $category->getCategoryName() ?>"
+            placeholder="Category Name" />
+        <select class="dropdown" id=" status" name="catalog_category[status]" ?>
+
+            <?php
+            $status = [1 => "Enabled", 0 => "Disabled"];
+            foreach ($status as $key => $item) {
+                echo '<option value="' . $key . '" ' . (($category->getStatus() == $item) ? 'selected' : '') . '>' . $item . '</option>';
+            }
+            ?>
+        </select>
+        <button type="submit" class="submit" name="submit">Save</button>
+    </form>
 </div>
