--- a/MvcPractice/app/design/Frontend/Template/catalog/form.phtml
+++ b/MvcPractice/app/design/Frontend/Template/catalog/form.phtml
@@ -33,7 +33,8 @@
                             <div class="quantity">
                                 <span>Quantity:</span>
                                 <div class="pro-qty">
-                                    <input type="number" min=1 name="cart[qty]" value="1">
+                                    <input type="number" min=1 max="<?php echo $this->getProduct()->getInventory() ?>"
+                                        name="cart[qty]">
                                 </div>
                             </div>
                             <a href="#" onclick="myPostData()" class="cart-btn"><span class="fa fa-shopping-bag"></span>
