--- a/MvcPractice/app/design/Frontend/Template/page/head.phtml
+++ b/MvcPractice/app/design/Frontend/Template/page/head.phtml
@@ -1,3 +1,7 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 <?php $js = $this->getJs(); ?>
 <?php if (count($js) > 0): ?>
     <?php foreach ($js as $_js): ?>
