--- a/MvcPractice/app/design/Frontend/Template/page/header.phtml
+++ b/MvcPractice/app/design/Frontend/Template/page/header.phtml
@@ -1,308 +1,78 @@
-<head>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-
-<body>
-
-    <ul id="slide-out" class="side-nav fixed z-depth-2">
-        <li class="center no-padding">
-            <div class="indigo darken-2 white-text" style="height: 180px;">
-                <div class="row">
-                    <img style="margin-top: 5%;" width="100" height="100"
-                        src="https://res.cloudinary.com/dacg0wegv/image/upload/t_media_lib_thumb/v1463990208/photo_dkkrxc.png"
-                        class="circle responsive-img" />
-
-                    <p style="margin-top: -13%;">
-                        Tirth Patel
-                    </p>
-                </div>
-            </div>
-        </li>
-
-        <li id="dash_dashboard"><a class="waves-effect" href="#!"><b>Dashboard</b></a></li>
-
-        <ul class="collapsible" data-collapsible="accordion">
-            <li id="dash_users">
-                <div id="dash_users_header" class="collapsible-header waves-effect"><b>Users</b></div>
-                <div id="dash_users_body" class="collapsible-body">
-                    <ul>
-                        <li id="users_seller">
-                            <a class="waves-effect" style="text-decoration: none;" href="#!">Seller</a>
-                        </li>
-
-                        <li id="users_customer">
-                            <a class="waves-effect" style="text-decoration: none;" href="#!">Customer</a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-
-            <li id="dash_products">
-                <div id="dash_products_header" class="collapsible-header waves-effect"><b>Products</b></div>
-                <div id="dash_products_body" class="collapsible-body">
-                    <ul>
-                        <li id="products_product">
-                            <a class="waves-effect" style="text-decoration: none;" href="#!">Products</a>
-                            <a class="waves-effect" style="text-decoration: none;" href="#!">Orders</a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-
-            <li id="dash_categories">
-                <div id="dash_categories_header" class="collapsible-header waves-effect"><b>Categories</b></div>
-                <div id="dash_categories_body" class="collapsible-body">
-                    <ul>
-                        <li id="categories_category">
-                            <a class="waves-effect" style="text-decoration: none;" href="#!">Category</a>
-                        </li>
-
-                        <li id="categories_sub_category">
-                            <a class="waves-effect" style="text-decoration: none;" href="#!">Sub Category</a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-
-            <li id="dash_brands">
-                <div id="dash_brands_header" class="collapsible-header waves-effect"><b>Brands</b></div>
-                <div id="dash_brands_body" class="collapsible-body">
-                    <ul>
-                        <li id="brands_brand">
-                            <a class="waves-effect" style="text-decoration: none;" href="#!">Brand</a>
-                        </li>
-
-                        <li id="brands_sub_brand">
-                            <a class="waves-effect" style="text-decoration: none;" href="#!">Sub Brand</a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-        </ul>
+<div class="offcanvas-menu-overlay"></div>
+<div class="offcanvas-menu-wrapper">
+    <div class="offcanvas__close">+</div>
+    <ul class="offcanvas__widget">
+        <li><span class="icon_search search-switch"></span></li>
+        <li><a href="#"><span class="icon_heart_alt"></span>
+                <div class="tip">2</div>
+            </a></li>
+        <li><a href="#"><span class="icon_bag_alt"></span>
+                <div class="tip">2</div>
+            </a></li>
     </ul>
+    <div class="offcanvas__logo">
+        <a href="./index.html"><img src="<?php echo $this->getImageUrl('logo1.png'); ?>" alt=""></a>
+    </div>
+    <div id="mobile-menu-wrap"></div>
+    <div class="offcanvas__auth">
+        <a href="#">Login</a>
+        <a href="#">Register</a>
+    </div>
+</div>
+<!-- Offcanvas Menu End -->
 
-    <header>
-        <ul class="dropdown-content" id="user_dropdown">
-            <li><a class="indigo-text" href="#!">Profile</a></li>
-            <li><a class="indigo-text" href="#!">Logout</a></li>
-        </ul>
-
-        <nav class="indigo" role="navigation">
-            <div class="nav-wrapper">
-                <a data-activates="slide-out" class="button-collapse show-on-" href="#!"><img
-                        style="margin-top: 17px; margin-left: 5px;"
-                        src="https://res.cloudinary.com/dacg0wegv/image/upload/t_media_lib_thumb/v1463989873/smaller-main-logo_3_bm40iv.gif" /></a>
-
-                <ul class="right hide-on-med-and-down">
-                    <li>
-                        <a class='right dropdown-button' href='' data-activates='user_dropdown'><i
-                                class=' material-icons'>account_circle</i></a>
-                    </li>
-                </ul>
-
-                <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-            </div>
-        </nav>
-
-        <nav>
-            <div class="nav-wrapper indigo darken-2">
-                <a style="margin-left: 20px;" class="breadcrumb" href="#!">Admin</a>
-                <a class="breadcrumb" href="#!">Index</a>
-
-                <div style="margin-right: 20px;" id="timestamp" class="right"></div>
-            </div>
-        </nav>
-    </header>
-
-    <main>
+<!-- Header Section Begin -->
+<header class="header">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col s6">
-                <div style="padding: 35px;" align="center" class="card">
-                    <div class="row">
-                        <div class="left card-title">
-                            <b>User Management</b>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <a href="#!">
-                            <div style="padding: 30px;" class="grey lighten-3 col s5 waves-effect">
-                                <i class="indigo-text text-lighten-1 large material-icons">person</i>
-                                <span class="indigo-text text-lighten-1">
-                                    <h5>Seller</h5>
-                                </span>
-                            </div>
-                        </a>
-                        <div class="col s1">&nbsp;</div>
-                        <div class="col s1">&nbsp;</div>
-
-                        <a href="#!">
-                            <div style="padding: 30px;" class="grey lighten-3 col s5 waves-effect">
-                                <i class="indigo-text text-lighten-1 large material-icons">people</i>
-                                <span class="indigo-text text-lighten-1">
-                                    <h5>Customer</h5>
-                                </span>
-                            </div>
-                        </a>
-                    </div>
+            <div class="col-xl-3 col-lg-2">
+                <div class="header__logo">
+                    <a href="./index.html"><img src="<?php echo $this->getImageUrl('logo1.png'); ?>" alt=""></a>
                 </div>
             </div>
-
-            <div class="col s6">
-                <div style="padding: 35px;" align="center" class="card">
-                    <div class="row">
-                        <div class="left card-title">
-                            <b>Product Management</b>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <a href="#!">
-                            <div style="padding: 30px;" class="grey lighten-3 col s5 waves-effect">
-                                <i class="indigo-text text-lighten-1 large material-icons">store</i>
-                                <span class="indigo-text text-lighten-1">
-                                    <h5>Product</h5>
-                                </span>
-                            </div>
-                        </a>
-
-                        <div class="col s1">&nbsp;</div>
-                        <div class="col s1">&nbsp;</div>
-
-                        <a href="#!">
-                            <div style="padding: 30px;" class="grey lighten-3 col s5 waves-effect">
-                                <i class="indigo-text text-lighten-1 large material-icons">assignment</i>
-                                <span class="indigo-text text-lighten-1">
-                                    <h5>Orders</h5>
-                                </span>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col s6">
-                <div style="padding: 35px;" align="center" class="card">
-                    <div class="row">
-                        <div class="left card-title">
-                            <b>Brand Management</b>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <a href="#!">
-                            <div style="padding: 30px;" class="grey lighten-3 col s5 waves-effect">
-                                <i class="indigo-text text-lighten-1 large material-icons">local_offer</i>
-                                <span class="indigo-text text-lighten-1">
-                                    <h5>Brand</h5>
-                                </span>
-                            </div>
-                        </a>
-
-                        <div class="col s1">&nbsp;</div>
-                        <div class="col s1">&nbsp;</div>
-
-                        <a href="#!">
-                            <div style="padding: 30px;" class="grey lighten-3 col s5 waves-effect">
-                                <i class="indigo-text text-lighten-1 large material-icons">loyalty</i>
-                                <span class="indigo-text text-lighten-1">
-                                    <h5>Sub Brand</h5>
-                                </span>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col s6">
-                <div style="padding: 35px;" align="center" class="card">
-                    <div class="row">
-                        <div class="left card-title">
-                            <b>Category Management</b>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <a href="#!">
-                            <div style="padding: 30px;" class="grey lighten-3 col s5 waves-effect">
-                                <i class="indigo-text text-lighten-1 large material-icons">view_list</i>
-                                <span class="indigo-text text-lighten-1">
-                                    <h5>Category</h5>
-                                </span>
-                            </div>
-                        </a>
-                        <div class="col s1">&nbsp;</div>
-                        <div class="col s1">&nbsp;</div>
-
-                        <a href="#!">
-                            <div style="padding: 30px;" class="grey lighten-3 col s5 waves-effect">
-                                <i class="indigo-text text-lighten-1 large material-icons">view_list</i>
-                                <span class="truncate indigo-text text-lighten-1">
-                                    <h5>Sub Category</h5>
-                                </span>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="fixed-action-btn click-to-toggle" style="bottom: 45px; right: 24px;">
-            <a class="btn-floating btn-large pink waves-effect waves-light">
-                <i class="large material-icons">add</i>
-            </a>
-
-            <ul>
-                <li>
-                    <a class="btn-floating red"><i class="material-icons">note_add</i></a>
-                    <a href="" class="btn-floating fab-tip">Add a note</a>
-                </li>
-
-                <li>
-                    <a class="btn-floating yellow darken-1"><i class="material-icons">add_a_photo</i></a>
-                    <a href="" class="btn-floating fab-tip">Add a photo</a>
-                </li>
-
-                <li>
-                    <a class="btn-floating green"><i class="material-icons">alarm_add</i></a>
-                    <a href="" class="btn-floating fab-tip">Add an alarm</a>
-                </li>
-
-                <li>
-                    <a class="btn-floating blue"><i class="material-icons">vpn_key</i></a>
-                    <a href="" class="btn-floating fab-tip">Add a master password</a>
-                </li>
-            </ul>
-        </div>
-    </main>
-
-    <footer class="indigo page-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col s12">
-                    <h5 class="white-text">Icon Credits</h5>
-                    <ul id='credits'>
-                        <li>
-                            Gif Logo made using <a href="https://formtypemaker.appspot.com/"
-                                title="Form Type Maker">Form Type Maker</a> from <a
-                                href="https://github.com/romannurik/FORMTypeMaker" title="romannurik">romannurik</a>
+            <div class="col-xl-6 col-lg-7">
+                <nav class="header__menu">
+                    <ul>
+                        <li class="active"><a href="./index.html">Home</a></li>
+                        <li><a href="#">Women’s</a></li>
+                        <li><a href="#">Men’s</a></li>
+                        <li><a href="./shop.html">Shop</a></li>
+                        <li><a href="#">Pages</a>
+                            <ul class="dropdown">
+                                <li><a href="./product-details.html">Product Details</a></li>
+                                <li><a href="./shop-cart.html">Shop Cart</a></li>
+                                <li><a href="./checkout.html">Checkout</a></li>
+                                <li><a href="./blog-details.html">Blog Details</a></li>
+                            </ul>
                         </li>
-                        <li>
-                            Icons made by <a href="https://material.io/icons/">Google</a>, available under <a
-                                href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License
-                                Version 2.0</a>
-                        </li>
+                        <li><a href="./blog.html">Blog</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-lg-3">
+                <div class="header__right">
+                    <div class="header__right__auth">
+                        <a href="<?php echo $this->getUrl('customer/account/login') ?>">
+                            Login
+                        </a>
+                        <a href="<?php echo $this->getUrl('customer/account/register') ?>">Register</a>
+                    </div>
+                    <ul class="header__right__widget">
+                        <li><span class="search-switch"><i class="fa fa-search" aria-hidden="true"></i></span></li>
+                        <li><a href="#"><span class="fa fa-heart"></span>
+                                <div class="tip">2</div>
+                            </a></li>
+                        <li><a href="<?php $this->getUrl('cart/index/index') ?>"><span
+                                    class="fa fa-shopping-bag"></span>
+                                <div class="tip">2</div>
+                            </a></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="footer-copyright">
-            <div class="container">
-                <span>Made By <a style='font-weight: bold;' href="https://github.com/piedcipher" target="_blank">Tirth
-                        Patel</a></span>
-            </div>
-        </div>
-    </footer>
-</body>
+        <div class="canvas__open">
 
-</html>
+        </div>
+    </div>
+</header>
