--- a/MvcPractice/skin/css/frontend/checkout.css
+++ b/MvcPractice/skin/css/frontend/checkout.css
@@ -47,8 +47,11 @@
 
 /* Style submit button */
 .button {
+    display: flex;
     text-align: center;
     margin-top: 20px;
+    flex-wrap: nowrap;
+    justify-content: space-between;
     /* Add margin to separate from other form elements */
 }
 
@@ -56,10 +59,18 @@
     background-color: #4CAF50;
     color: white;
     padding: 10px 20px;
+    margin: 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+}
+
+.address-details {
+    border: 1px;
+    display: flex;
+    margin: 10px;
+    justify-content: space-evenly;
 }
 
 /* Change submit button color on hover */
